--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,9 @@ jobs:
           npm ci
 
       - name: Build and Export
-        run: npm run build
+        run: |
+          npm run build
+          npm run export
         env:
           NEXT_PUBLIC_BASE_PATH: '/${{ github.event.repository.name }}'
 
