--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "next build",
     "start": "next start -H 0.0.0.0",
     "lint": "next lint",
-    "export": "next build && next export"
+    "export": "next export"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
