--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,9 @@ jobs:
         run: npm run build
         env:
           NEXT_PUBLIC_BASE_PATH: '/${{ github.event.repository.name }}'
+        
+      - name: list files
+        run: ls -la
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
